# IntelliGlow-AI-Voice-MCP-IoT-Platform

./: .gitignore  README.md  bulb_config.json  pyproject.toml  test_network_bulbs.py  voice_enabled_server.py
mcp_server_smartbulb/: __init__.py  bulb_discovery.py  network_server.py  udp_client.py  voice_interface.py
