[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intelliglow"
version = "0.2.0"
description = "IntelliGlow - AI-Powered Smart Lighting with Voice Commands and UDP Networking"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["mcp", "smart bulb", "UDP", "AI", "voice control", "home automation", "intelliglow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Home Automation",
    "Topic :: Communications",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
]
dependencies = [
    "fastmcp>=0.1.0",
    "asyncio>=3.4.3",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]
voice = [
    "SpeechRecognition>=3.10.0",
    "pyttsx3>=2.90",
    "pyaudio>=0.2.11",
]

[project.scripts]
mcp-server-smartbulb = "mcp_server_smartbulb.network_server:main"
mcp-server-smartbulb-voice = "mcp_server_smartbulb.voice_interface:main"
intelliglow = "mcp_server_smartbulb.network_server:main"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 